# VisionEdge

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/visionedge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  native-lib.cpp
app/src/main/java/com/example/visionedge/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/visionedge/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
